adding statistics to the query metadata - adding `FieldStatistics`
